change return type to DTO
